# crave-bundle

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README  README.md  bootstrap.sh
examples/: CMakeLists.txt  Makefile  common.mk
examples/ALU/: ALU12.cpp  ALU16.cpp  ALU24.cpp  ALU32.cpp  ALU4.cpp  CMakeLists.txt
examples/ex1_seed_dist/: Makefile  main.cpp
examples/ex2_constr_ref/: main.cpp
examples/ex3_inh_soft_next/: main.cpp
examples/ex4_constr_mng/: main.cpp
examples/ex5_vec_constr/: main.cpp
examples/ex6_inline_gen/: main.cpp
examples/ex7_randv_enum/: main.cpp
examples/sudoku/: main.cpp
