find_package(SystemC QUIET)
find_package(Threads REQUIRED)
include_directories(${SystemC_INCLUDE_DIR} ${metaSMT_INCLUDE_DIR})

add_executable(ALU4 ALU4.cpp)
target_link_libraries(ALU4 crave ${SystemC_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${Boost_THREAD_LIBRARY})
add_executable(ALU12 ALU12.cpp)
target_link_libraries(ALU12 crave ${SystemC_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${Boost_THREAD_LIBRARY})
add_executable(ALU16 ALU16.cpp)
target_link_libraries(ALU16 crave ${SystemC_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${Boost_THREAD_LIBRARY})
add_executable(ALU24 ALU24.cpp)
target_link_libraries(ALU24 crave ${SystemC_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${Boost_THREAD_LIBRARY})
add_executable(ALU32 ALU32.cpp)
target_link_libraries(ALU32 crave ${SystemC_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${Boost_THREAD_LIBRARY})
